Fix overlapping text in the contact section on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -63,8 +63,8 @@ section.grid > div {
 section.grid > div {
   flex: 1;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: min-content;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-flow: row;
 }
 
 @media print {
